atualizado area de experiências.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>melissads - Medicina Veterinária</title>
+    <title>Melissa - Medicina Veterinária</title>
     <meta
       name="description"
       content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro"
@@ -25,11 +25,14 @@
     </header>
 
     <main class="introducao">
-      <img src="./img/perfil_img" alt="Lobo Cinza" width="360" height="520" />
+      <img
+        src="./img/perfil_img"
+        alt="clinica Veterinária"
+        width="360"
+        height="520"
+      />
       <div>
-        <h1>
-          Medicina<br />Veterinária,<br />Atualmente cursando 5º Semestre.
-        </h1>
+        <h1>Medicina<br />Veterinária.<br /></h1>
         <p>Localizada em Lauro de Freitas - Bahia 🏖</p>
       </div>
     </main>
@@ -38,10 +41,11 @@
       <h2 class="subtitulo">Experiência</h2>
       <div>
         <p class="experiencia-texto">
-          Buscando <strong>Estágio</strong>na área de<strong
-            >Medicina Veterinária</strong
-          >, com interesse em adquirir experiência prática e contribuir para o
-          bem-estar animal.
+          Buscando <strong>Estágio</strong>na área de
+          <strong>Medicina Veterinária</strong>, cursando
+          <strong>5º semestre</strong>, com interesse em adquirir
+          <strong>experiência prática</strong> e contribuir para o bem-estar
+          animal.
         </p>
 
         <div class="empresa">
