--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main class="introducao">
       <img
-        src="./img/perfil_img"
+        src="./img/perfilMel.jpg"
         alt="clinica Veterinária"
         width="360"
         height="520"
