--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </p>
 
         <div class="empresa">
-          <span class="empresa-ano">2023-2025</span>
-          <h3 class="empresa-titulo">UNIME</h3>
+          <span class="empresa-ano">Junho/2025</span>
+          <h3 class="empresa-titulo">Agrocape</h3>
           <span class="empresa-titulo">Atendimento e Triagem</span>
           <p class="empresa-texto">
             Atendimento e manejo de animais de pequeno e grande porte - Auxílio
