--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="empresa">
           <span class="empresa-ano">Junho/2025</span>
           <h3 class="empresa-titulo">Agrocape</h3>
-          <span class="empresa-titulo">Atendimento e Triagem</span>
+          <span class="empresa-titulo">Promotória e Atendimento</span>
           <p class="empresa-texto">
             Atendimento e manejo de animais de pequeno e grande porte - Auxílio
             em procedimentos veterinários - Suporte aos cuidados, administração
