--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
           <h3 class="empresa-titulo">Agrocape</h3>
           <span class="empresa-titulo">Promotória e Atendimento</span>
           <p class="empresa-texto">
-            Atendimento e manejo de animais de pequeno e grande porte - Auxílio
-            em procedimentos veterinários - Suporte aos cuidados, administração
-            de medicamentos e Organização do ambiente clínico.
+            Experiência na area de promotoria de medicamentos veterinário, e atendimento ao cliente final.
           </p>
           <ul class="empresa-habilidades">
             <li>Castração de Machos</li>
