atualizado dados de experiencia profissional.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2 class="subtitulo">Experiência</h2>
       <div>
         <p class="experiencia-texto">
-          Buscando <strong>Estágio</strong>na área de
+          Buscando <strong>Estágio</strong> na área de
           <strong>Medicina Veterinária</strong>, cursando
           <strong>6º semestre</strong>, com interesse em adquirir
           <strong>experiência prática</strong> e contribuir para o bem-estar
@@ -53,12 +53,12 @@
           <h3 class="empresa-titulo">Agrocape</h3>
           <span class="empresa-titulo">Promotória e Atendimento</span>
           <p class="empresa-texto">
-            Experiência na area de promotoria de medicamentos veterinário, e atendimento ao cliente final.
+            Experiência na área de promotoria de medicamentos veterinário, e atendimento ao cliente final.
           </p>
           <ul class="empresa-habilidades">
             <li>Castração de Machos</li>
             <li>Primeiros socorros</li>
-            <li>ferimentos e hemorragias.</li>
+            <li>Ferimentos e hemorragias.</li>
             <li>Limpeza de miíase.</li>
           </ul>
         </div>
@@ -73,7 +73,7 @@
           <p class="formacao-texto">
             Minha mais recente experiência acadêmica é o curso superior em:
             <strong>Medicina Veterinária</strong> 🎓 na faculdade<strong
-              >UNIME</strong
+              > UNIME</strong
             >
             em curso até a presente. Além disso me mantenho sempre atualizado
             com <strong>cursos intensivos</strong>.
@@ -119,13 +119,13 @@
     <footer class="footer" id="contato">
       <div class="footer-container">
         <p class="footer-texto">
-          Estou disponível para estágio imediato. Entre em contato comigo👋
+          Estou disponível para estágio e vagas  imediatas. Entre em contato comigo👋
         </p>
         <ul class="footer-contato">
           <li>melissads.bacelar@icloud.com</li>
           <li>+55 (71) 98388-6603</li>
         </ul>
-        <p class="footer-copy">sdlima. Alguns direitos reservados.</p>
+        <p class="footer-copy">sdlima. todos os direitos reservados.</p>
       </div>
     </footer>
   </body>
